--- a/enrolment.css
+++ b/enrolment.css
@@ -46,10 +46,8 @@
 }
 
 .radio-label {
-  background-color: rgb(156, 156, 156);
   cursor: pointer;
   width: 100%;
-  
 }
 
 .step-collapsible {
@@ -57,7 +55,6 @@
   display: flex;
   overflow: hidden;
   flex-wrap: wrap;
-  background-color: rgb(255, 182, 182);
   transition: max-height 0.5s ease-out;
 }
 
@@ -69,7 +66,7 @@
   width: 100%;
 }
 
-.expand, .radio-label:hover {
+.expand, .step-title:hover {
   background-color: rgb(131, 131, 131);
 }
 
