--- a/enrolment.css
+++ b/enrolment.css
@@ -9,6 +9,7 @@
   font-size: 1.2em;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
+  background-color: rgb(211, 211, 211);
 }
 
 .step:first-of-type {
@@ -42,15 +43,17 @@
 .step-title {
   width: inherit;
   margin-left: 50px;
-  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .radio-label {
+  display: block;
   cursor: pointer;
   width: 100%;
 }
 
 .step-collapsible {
+  border-top: none;
   max-height: 0;
   display: flex;
   overflow: hidden;
@@ -67,7 +70,7 @@
 }
 
 .expand, .step-title:hover {
-  background-color: rgb(131, 131, 131);
+  background-color: none;
 }
 
 
@@ -88,9 +91,7 @@
 
 /*desktop mode*/
 @media only screen and (min-width: 961px) {
-  .step-title {
-    border-bottom: 1px solid black;
-  }
+
   
   .step-collapsible .step-location,
   .step-collapsible .step-requirement,
