--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,14 @@
   margin: 0;
   padding: 0;
   font-family: "Prompt";
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 
 a {
   text-decoration: none;
@@ -153,14 +160,14 @@ a {
 /*mobile screen */
 @media only screen and (max-width: 480px) {
   .main-page {
-    background-color: rgb(255, 255, 255);
+    background-color: white;
   }
 }
 
 /*tablet screen*/
 @media only screen and (min-width: 481px) and (max-width: 960px){
   .main-page {
-    background-color: blue;
+    background-color: rgb(228, 228, 228);
   }
 
   .sidebar-btn, .search-btn {
@@ -184,7 +191,7 @@ a {
 /*desktop screen*/
 @media only screen and (min-width: 961px) {
   .main-page {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(200, 200, 200);
     width: 960px;
     margin: 0 auto;
   }
