--- a/enrolment.css
+++ b/enrolment.css
@@ -50,6 +50,7 @@
   display: block;
   cursor: pointer;
   width: 100%;
+  user-select: none;
 }
 
 .step-collapsible {
@@ -67,6 +68,7 @@
   border-top: 1px solid black;
   padding: 5px 0;
   width: 100%;
+  user-select: none;
 }
 
 .expand, .step-title:hover {
