--- a/enrolment.css
+++ b/enrolment.css
@@ -53,6 +53,7 @@
   p {
     font-weight: 700;
   }
+  transition: margin-bottom 0.3s ease-out;
 }
 
 .step-collapsible {
@@ -67,8 +68,7 @@
 .step-collapsible .step-location,
 .step-collapsible .step-requirement,
 .step-collapsible .step-process {
-  border: 1px solid black;
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(214, 214, 214);
   padding: 5px;
   width: 100%;
   user-select: none;
