--- a/enrolment.css
+++ b/enrolment.css
@@ -5,9 +5,10 @@
 }
 
 .step {
-  padding: 10px 0;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
   font-size: 1.2em;
-  border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
 
@@ -15,9 +16,11 @@
   border-top: none;
 }
 
+
 .radio-container {
   position: absolute;
-  left: 15px;
+  top: 13px;
+  left: 5px;
 }
 
 .radio-btn {
@@ -40,29 +43,43 @@
 }
 
 .step-title {
-  width: inherit;
-  margin-left: 50px;
-  margin-right: 10px;
+  width: 100%;
+  padding: 5px 0;
 }
 
 .radio-label {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 5px 10px 50px;
+  border-radius: 5px;
   cursor: pointer;
   width: 100%;
   user-select: none;
   p {
+    display: block;
     font-weight: 700;
   }
-  transition: margin-bottom 0.3s ease-out;
+  
 }
 
+.radio-label:after {
+  content: "⯆";
+}
+
+.radio-label:hover {
+  background-color: lightgray;
+}
+
+
 .step-collapsible {
+  margin: 0 0;
+  padding-left: 50px;
   border-top: none;
   max-height: 0;
   display: flex;
   overflow: hidden;
   flex-wrap: wrap;
-  transition: max-height 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 .step-collapsible .step-location,
@@ -80,6 +97,11 @@
 .expand, .step-title:hover {
   background-color: none;
 }
+
+.expand:after {
+  content: "⯅";
+}
+
 
 
 
