--- a/processpage.css
+++ b/processpage.css
@@ -62,6 +62,10 @@
   margin: 1rem 0;
   opacity: 0.3;
 }
+.container:first-of-type {
+  margin-top: 0.1rem;
+}
+
 .accordion-header {
   border-radius: 8px 8px 8px 8px;
   background-color: white;
