--- a/processcontent.css
+++ b/processcontent.css
@@ -1,30 +1,38 @@
 .content {
-  p, li {
+  p, ul, li, em, strong{
     font-size: 0.875rem;
     font-family: "DM-Sans-Regular";
   }
   h5 {
-    font-family: "DM-Sans-Bold";
-    padding: 0.75rem 0;
+  font-size: 0.875rem;
+  font-family: "DM-Sans-Bold";
   }
-
-
+  li {
+    padding-bottom: 0.5rem;
+  }
 }
 
-.subcontent {
+.content > h5 {
+  padding: 0.75rem 0;
+}
+
+.content > p {
   padding-left: 1rem;
 }
+.content > ul {
+  padding-left: 1rem;
+  > li > ul {
+    padding-left: 1rem;
+    list-style-type: disc;
+  }
+}
 
-.subcontent > li {
+.collapsible-content, .listed-content {
   list-style-type: none;
-  padding: 0 0 0.5rem;
-  h5 {
-    padding: 0 0 0 0.2rem;
+  > li > ul {
+    padding-left: 1rem;
+    list-style-type: disc;
   }
-}
-.subcontent > li > ul {
-  padding-left: 1rem;
-  list-style-type: disc;
 }
 
 .collapsible-header {
