--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@
   font-family: "Poppins-Regular";
 }
 
+body {
+  background-color: #F3F4F6;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -122,7 +126,7 @@ a {
 
 /*main page starts here*/
 .main-page {
-  border: 1px solid black;
+  background-color: #E8EAED;
   position: relative;
   display: flex;
   justify-content: center;
@@ -199,7 +203,7 @@ a {
 /*mobile screen */
 @media only screen and (max-width: 480px) {
   .main-page {
-    background-color: white;
+    background-color: #E8EAED;
   }
 }
 
@@ -229,6 +233,7 @@ a {
   .main-page {
     width: 960px;
     margin: 0 auto;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 
   .main-page .section {
