change css file name and some bug fixes

--- a/main.css
+++ b/main.css
@@ -183,6 +183,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  line-height: 110%;
   height: 25%;
   z-index: 1;
 }
