--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   font-size: 16px;
-  font-family: "Poppins-Regular";
+  font-family: "Poppins-Regular", Helvetica, sans-serif;
 }
 
 body {
