--- a/main.css
+++ b/main.css
@@ -67,22 +67,24 @@ h5, p {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 .header {
   z-index: 1;
-  background-color: white;
-  border-bottom: 2px solid black;
+  background-color: rgb(61, 61, 61);
+  border-bottom: 1px solid black;
   position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 20px;
+  height: 4rem;
+  padding: 0 1rem;
 }
 
 /*sidebar starts here*/
-.sidebar {
+.mobile-sidebar {
   position: fixed;
   top: 0;
   left: 0;
@@ -90,54 +92,74 @@ a {
   display: block;
   height: 100%;
   width: 0;
-  background-color: rgb(255, 255, 255);
-  transition: 0.5s;
+  background-color: #f4f4f4;
+  transition: 0.3s ease-out;
   overflow-x: hidden;
-  border: 1px solid black;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2)
 }
 
 .sidebar-btn, .closebtn {
   cursor: pointer;
 }
 
-.sidebar .nav-top {
+.mobile-sidebar .nav-top {
+  background-color: rgb(61, 61, 61);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  border-bottom: 2px solid black;
-  background-color: rgb(255, 223, 223);
-  padding: 20px;
+  padding: 0 1rem;
+  height: 4rem;
 }
-.sidebar .nav-top img {
-  display: block;
+.nav-list {
+  padding: 0 1rem;
+}
+.list-header {
+  list-style-type: none;
+  padding-left: 0.5rem;
+}
+.list-name {
+  list-style-type: none;
+  > li {
+    display: block;
+    list-style-type: none;
+    padding-left: 1.2rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  > li:hover {
+    background-color: #dddee0;
+  }
 }
 
-.sidebar .nav-list {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  width: inherit;
-  li {
-    list-style-type: none;
-  }
+.desktop-sidebar {
+  margin-top: 2rem;
+  position: fixed;
+  top: 4rem;
+  left: 0;
+  z-index: 2;
+  display: none;
+  height: 100%;
+  width: 20%;
 }
 /*sidebar ends here*/
 
 
 /*main page starts here*/
 .main-page {
-  background-color: #E8EAED;
+  /*background-color: #E8EAED;*/
   position: relative;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.main-page .header-placeholder {
+.header-placeholder {
   width: 100%;
-  height: 80px;
+  height: 5rem;
 }
-.main-page .section {
+.section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,13 +168,13 @@ a {
   padding: 20px;/* dont delete this important line lmao */
 }
 
-.main-page .viewcard {
+.viewcard {
   display: flex;
   align-items: flex-end;
   justify-content: center;
   position: relative;
-  width: 170px;
-  height: 170px;
+  width: 10rem;
+  height: 10rem;
   overflow: hidden;
   border: 1px solid black;
   border-radius: 10px;
@@ -162,7 +184,7 @@ a {
 
 }
 
-.main-page .viewcard:hover {
+.viewcard:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
 
   .card-image {
@@ -170,13 +192,14 @@ a {
   }
 }
 
-.main-page .viewcard .card-image {
+.viewcard .card-image {
   position: absolute;
   height: 100%;
+  width: 100%;
   transition: transform 0.5s;
 }
 
-.main-page .card-name {
+.card-name {
   background-color: white;
   width: 100%;
   border-top: 1px solid black;
@@ -216,7 +239,7 @@ a {
     width: 40px;
   }
 
-  .nav-top img {
+  .mobile-sidebar .nav-top img {
     height: 40px;
   }
 
@@ -233,12 +256,13 @@ a {
 /*desktop screen*/
 @media only screen and (min-width: 961px) {
   .main-page {
-    width: 960px;
+    width: 60%;
     margin: 0 auto;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+    /*box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);*/
   }
 
-  .main-page .section {
+  .section {
     width: 33%;
   }
 
@@ -246,14 +270,16 @@ a {
     width: 200px;
   }
 
-  .sidebar-btn, .search-btn {
+  .mobile-sidebar, .sidebar-btn {
+    display: none;
+  }
+
+  .desktop-sidebar {
+    display: block;
+  }
+  .search-btn {
     width: 50px;
   }
-
-  .nav-top img {
-    height: 50px;
-  }
-
   .main-page .header-placeholder {
     height: 90px;
   }
