--- a/page.css
+++ b/page.css
@@ -17,6 +17,9 @@
   width: fit-content;
   display: flex;
   justify-content: flex-start;
+  padding: 0.2rem;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-radius: 4px; 
     img {
       margin-right: 0.5rem;
     }
@@ -131,12 +134,21 @@
   border-radius: 5px;
   background-color: black;
   color: white;
+  cursor: pointer;
 }
 
 .back-button {
   border-radius: 5px;
   background-color: white;
   color: black;
+  cursor: pointer;
+}
+
+.finish-button {
+  border-radius: 5px;
+  background-color: rgb(241, 211, 62);
+  color: black;
+  cursor: pointer;
 }
 
 .active {
@@ -165,10 +177,10 @@
 /*desktop mode*/
 @media only screen and (min-width: 961px) {
   *{
-    font-size: 20px;
+    font-size: 20px;  
   }
   .process-header {
-    width: 960px;
+    width: 60%;
     margin: 0 auto;
   }
 
