--- a/glossary.css
+++ b/glossary.css
@@ -10,18 +10,25 @@
   width: 100%;
   height: 4.5rem;
   padding-left: 1rem;
+  margin-bottom: 0.75rem;
   h1 {
     font-family: "Poppins-Bold", Helvetica, sans-serif;
   }  
 }
 .term {
   min-height: 100px;
+  width: 100%;
   overflow: hidden;
-  margin: 1.5rem;
-  margin-bottom: 0;
+  margin: 0.75rem 1.5rem ;
   border: 1px solid black;
   border-radius: 12px;
   background-color: #D7D7D7;
+  transition: 0.4s ease-in;
+}
+
+.group-section {
+  display: block;
+  opacity: 1;
 }
 
 .term-title {
@@ -36,10 +43,10 @@
   font-family: "DM-Sans-Regular";
 }
 
-
 @media only screen and (min-width: 961px) {
   .glossary-header {
     width: 60%;
     margin: 0 auto;
+    margin-bottom: 0.75rem;
   }
 }
