--- a/page.css
+++ b/page.css
@@ -10,6 +10,8 @@
   width: 100%;
   height: 9rem;
   padding: 0.8rem;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .back-home {
@@ -172,12 +174,8 @@
 
 
 
-
-
-/*tablet mode*/
-
 /*desktop mode*/
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 1025px) {
   *{
     font-size: 20px;  
   }
