--- a/glossary.css
+++ b/glossary.css
@@ -10,10 +10,13 @@
   width: 100%;
   height: 4.5rem;
   padding-left: 1rem;
-  margin-bottom: 0.75rem;
   h1 {
     font-family: "Poppins-Bold", Helvetica, sans-serif;
   }  
+}
+
+.main-page {
+  padding-top: 0.75rem;;
 }
 .term {
   min-height: 100px;
@@ -43,10 +46,12 @@
   font-family: "DM-Sans-Regular";
 }
 
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 1025px) {
   .glossary-header {
-    width: 60%;
+    width: 50%;
     margin: 0 auto;
-    margin-bottom: 0.75rem;
+  }
+  .main-page {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 }
