--- a/main.css
+++ b/main.css
@@ -42,6 +42,10 @@
 
 body {
   background-color: #F3F4F6;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 ::-webkit-scrollbar {
@@ -72,15 +76,26 @@ a {
 
 .header {
   z-index: 1;
-  background-color: rgb(61, 61, 61);
-  border-bottom: 1px solid black;
+  background-color: #ffffff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   height: 4rem;
   padding: 0 1rem;
+}
+
+.header-icons {
+  width: 2rem;
+  margin-left: 0.8rem;
+}
+.search-btn {
+  position: absolute;
+  right: 0;
+  margin-right: 1rem;
+  width: 2rem;
 }
 
 /*sidebar starts here*/
@@ -94,14 +109,15 @@ a {
   height: 95%;
   width: 0;
   background-color: #f4f4f4;
-  transition: 0.4s ease-out;
+  transition: 0.2s ease-out;
   overflow-x: hidden;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2)
 }
 
 .sidebar-open {
-  content: url(ico/sidebar.svg);
+  content: url(ico/light-mode/sidebaropen-blue.svg);
   cursor: pointer;
+  width: 2rem;
 }
 
 .sidebar-close {
@@ -114,10 +130,14 @@ a {
   z-index: 2;
   display: none;
   white-space: nowrap;
-  height: 95%;
-  width: 20%;
-  border-right: 1px solid black;
+  height: 100vh;
+  width: 25%;
   overflow-y: hidden;
+  border-bottom: 1px solid #333399;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.19);
+  backdrop-filter: blur(5.8px);
+  -webkit-backdrop-filter: blur(5.8px);
 }
 .desktop-sidebar:hover {
   overflow-y: auto;
@@ -131,6 +151,7 @@ a {
   list-style-type: none;
   padding: 1rem 0;
   p {
+    color: #333399;
     opacity: 0.5;
   }
 }
@@ -140,17 +161,46 @@ a {
 
 .list-name {
   > li {
-    list-style-type: circle;
-    margin-left: 1.2rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+    position: relative;
+    list-style-type: none;
+    padding-left: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     border-radius: 6px;
     cursor: pointer;
+    list-style-position: inside;
+    a{
+      color: #333399;
+    }
   }
   > li:hover {
-    background-color: #dddee0;
+    background-color: #333399;
+    a {
+      color: white;
+    }
   }
 }
+
+.doclist {
+  > li:before {
+    content: url(ico/sidebar-doc.svg);
+    position: absolute;
+    left: 0.4rem;
+    top: 50%;
+    margin-top: -0.7rem;
+  }
+}
+
+.loclist {
+  >li:before {
+    content: url(ico/sidebar-loc.svg);
+    position: absolute;
+    left: 0.4rem;
+    top: 50%;
+    margin-top: -0.7rem;
+  }
+}
+
 .disable-link {
   pointer-events: none;
 }
@@ -160,6 +210,18 @@ a {
   height: 5vh;
 }
 /*sidebar ends here*/
+
+
+/*main title starts here*/
+.main-title {
+  display: flex;
+  justify-content: center;
+  height: 18rem;
+  img {
+    display: block;
+    width: 80%;
+  }
+}
 
 
 /*main page starts here*/
@@ -175,60 +237,62 @@ a {
 
 .header-placeholder {
   width: 100%;
-  height: 5rem;
+  height: 4rem;
 }
 .section {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  width: 50%;
-  padding: 0.5rem;/* dont delete this important line lmao */
+  width: 100%;
+  padding: 0.5rem 1.5rem;/* dont delete this important line lmao */
 }
 
 .viewcard {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
   position: relative;
-  width: 10rem;
-  height: 10rem;
-  overflow: hidden;
-  border: 1px solid black;
-  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: white;
+  width: 100%;
+  height: 5rem;
+  border-radius: 1.25rem;
   cursor: pointer;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-  transition: box-shadow 0.3s;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
 
 }
 
 .viewcard:hover {
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
-
-  .card-image {
-    transform: scale(1.1);
+  background-color: #333399;
+  .card-name {
+    h4 {
+      color: white;
+    }
   }
 }
 
 .viewcard .card-image {
-  position: absolute;
-  height: 100%;
+  margin: 0.75rem;
+  width: 3.5rem;
+  border-radius: 0.75rem;
   transition: transform 0.5s;
   overflow: hidden;
 }
 
 .card-name {
-  background-color: white;
-  width: 100%;
-  border-top: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  line-height: 110%;
-  height: 25%;
-  z-index: 1;
+  h4 {
+    font-family: "Poppins-Bold";
+    color: #333399;
+  }
+  margin-left: 0.75rem;
 }
 
+.viewcard::after {
+  content: url(ico/light-mode/enter-blue.svg);
+  position: absolute;
+  right: 1rem;
+  margin-top: 0.41rem;
+}
 
 
 
@@ -268,18 +332,37 @@ a {
 
 /*desktop screen*/
 @media only screen and (min-width: 1025px) {
+  body {
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    background-size: 100%;
+    background-position: 100% -10%;
+  }
+  .main-title {
+    width: 75%;
+    height: 8rem;
+  }
   .main-page {
-    width: 60%; 
-    margin: 0 auto;
+    margin: 0 2.5%;
+    width: 70%;
     /*box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);*/
   }
 
-  .section {
-    width: 33%;
+  .header {
+    .school-name {
+      display: block;
+      margin-left: 0.8rem;
+      color: #333399;
+      font-family: "Poppins-Bold";
+    }
   }
 
-  .text-logo {
-    width: 200px;
+  .section {
+    width: 50%;
+    padding: 0.5rem .5rem;
   }
 
   .mobile-sidebar, .sidebar-open {
