--- a/page.css
+++ b/page.css
@@ -1,6 +1,3 @@
-
-
-
 .process-header {
   position: relative;
   z-index: 1;
@@ -35,6 +32,7 @@
   position: absolute;
   bottom: 0;
   user-select: none;
+  color: #E3D585;
   h1 {
     font-family: "Poppins-Bold", Helvetica, sans-serif;
   }
@@ -60,6 +58,7 @@
 }
 
 .container {
+  position: relative;
   background-color: #d7d7d7;
   display: block;
   align-items: flex-start;
@@ -116,7 +115,7 @@
   display: block;
   overflow: hidden;
   padding: 0 1rem;
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .nav-button {
@@ -143,14 +142,14 @@
 
 .back-button {
   border-radius: 5px;
-  background-color: white;
+  background-color: #D7D7D7;
   color: black;
   cursor: pointer;
 }
 
 .finish-button {
   border-radius: 5px;
-  background-color: rgb(241, 211, 62);
+  background-color: #E3D585;
   color: black;
   cursor: pointer;
 }
@@ -179,8 +178,12 @@
   *{
     font-size: 20px;  
   }
+
+  body {
+    display: block;
+  }
   .process-header {
-    width: 60%;
+    width: 50%;
     margin: 0 auto;
   }
 
@@ -196,5 +199,11 @@
     top: 1.1rem;
     position: absolute;
     transform: scale(2.4);
+  }
+
+  .main-page {
+    width: 50%;
+    margin: 0 auto;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 }
