adjust main title height

--- a/main.css
+++ b/main.css
@@ -220,6 +220,7 @@ a {
   display: flex;
   justify-content: center;
   height: 12rem;
+  margin-bottom: 2rem;
   img {
     display: block;
     width: 80%;
@@ -347,6 +348,7 @@ a {
   .main-title {
     width: 75%;
     height: 8rem;
+    margin-bottom: 0;
   }
   .main-page {
     margin: 0 2.5%;
