--- a/content.css
+++ b/content.css
@@ -36,28 +36,43 @@
 }
 
 .collapsible-header {
+  user-select: none;
   cursor: pointer;
   position: relative;
+  border-radius: 4px 4px 0 0;
+  padding-left: 0.2rem;
 
 }
 .collapsible-header::after {
   position: absolute;
-  content: url(ico/collapse-down.svg);
+  content: url(ico/dark-mode/collapse-down.svg);
   width: 1.25rem;
   margin-left: 0.2rem;
 }
 .collapsible-header:hover {
-  background-color: rgb(199, 199, 199);
+  background-color: #7da7d9;
+  color: white;
 }
+
+.collapsible-header:hover::after {
+  content: url(ico/light-mode/collapse-down.svg);
+}
+
 .open {
-  background-color: rgb(180, 180, 180);
+  background-color: #7da7d9;
+  color: white;
 }
 .open::after {
   position: absolute;
-  content: url(ico/collapse-up.svg);
+  content: url(ico/light-mode/collapse-up.svg);
   width: 1.25rem;
   margin-left: 0.2rem;
 }
+
+.open:hover::after {
+  content: url(ico/light-mode/collapse-up.svg);
+}
+
 .collapsible-panel {
   max-height: 0;
   overflow: hidden;
