--- a/page.css
+++ b/page.css
@@ -1,9 +1,13 @@
+body {
+  background-image: url(gallery/480p/mainbg-mobile.png);
+  background-attachment: fixed;
+}
 .process-header {
   position: relative;
   z-index: 1;
-  background-color: rgb(61, 61, 61);
-  border: 1px solid black;
-  color: rgb(236, 236, 236);
+  background-image: url(gallery/480p/processheader-mobile.png);
+  background-color: #7da7d9;
+  color: white;
   width: 100%;
   height: 9rem;
   padding: 0.8rem;
@@ -32,7 +36,7 @@
   position: absolute;
   bottom: 0;
   user-select: none;
-  color: #E3D585;
+  color: white;
   h1 {
     font-family: "Poppins-Bold", Helvetica, sans-serif;
   }
@@ -44,6 +48,7 @@
   margin: 0.4rem 0.8rem;
   user-select: none;
   h3 {
+    color: #252728;
     font-family: "Poppins-Medium", Helvetica, sans-serif;
   }
   li {
@@ -59,11 +64,11 @@
 
 .container {
   position: relative;
-  background-color: #d7d7d7;
+  background-color: white;
   display: block;
   align-items: flex-start;
   font-size: 1.2rem;
-  border: 1px solid black;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   margin: 1rem 0;
   opacity: 0.3;
@@ -74,7 +79,7 @@
 
 .accordion-header {
   border-radius: 8px 8px 8px 8px;
-  background-color: #E8EAED;
+  background-color: #333399;
   display: flex;
   width: 100%;
   border-bottom: 0px solid black;
@@ -89,18 +94,19 @@
   width: 100%;
   user-select: none;
   h4 {
+    color: white;
     font-family: "Poppins-Medium", Helvetica, sans-serif;
   }
 }
 .accordion-label::before{
-  content: url(ico/unchecked\ box.svg);
+  content: url(ico/light-mode/unchecked\ box.svg);
   left: 0.9rem;
   top: 1rem;
   position: absolute;
   transform: scale(1.8);
 }
 .accordion-label::after {
-  content: url(ico/collapse-down.svg);
+  content: url(ico/light-mode/collapse-down.svg);
   position: absolute;
   right: 0.3rem;
   bottom: 0.5rem;
@@ -116,6 +122,7 @@
   overflow: hidden;
   padding: 0 1rem;
   transition: all 0.3s ease-out;
+  color: #252728;
 }
 
 .nav-button {
@@ -134,23 +141,26 @@
 }
 
 .next-button {
+  border-style: none;
   border-radius: 5px;
-  background-color: black;
+  background-color: #333399;
   color: white;
   cursor: pointer;
 }
 
 .back-button {
+  border: 2px solid #333399;
   border-radius: 5px;
-  background-color: #D7D7D7;
-  color: black;
+  background-color: white;
+  color: #333399;
   cursor: pointer;
 }
 
 .finish-button {
+  border-style: none;
   border-radius: 5px;
-  background-color: #E3D585;
-  color: black;
+  background-color: rgb(56, 130, 56);
+  color: white;
   cursor: pointer;
 }
 
@@ -161,18 +171,25 @@
     border-radius: 8px 8px 0px 0px;
   }
   .accordion-label::after {
-    content: url(ico/collapse-up.svg);
+    content: url(ico/light-mode/collapse-up.svg);
   }
 }
 
 .done {
   .accordion-label::before{
-    content: url(ico/checked\ box.svg);
+    content: url(ico/light-mode/checked\ box.svg);
   }
 }
 
-
-
+/*tab mode*/
+@media only screen and (min-width: 481px) and (max-width: 1024px){
+  body {
+    background-image: url(gallery/768p/mainbg-tab.png);
+  }
+  .process-header {
+    background-image: url(gallery/768p/processheader-tab.png);
+  }
+}
 /*desktop mode*/
 @media only screen and (min-width: 1025px) {
   *{
@@ -180,11 +197,13 @@
   }
 
   body {
+    background-image: url(gallery/1152p/mainbg-desktop.png);
     display: block;
   }
   .process-header {
     width: 50%;
     margin: 0 auto;
+    background-image: url(gallery/1152p/processheader-desktop.png)
   }
 
   .procedure {
@@ -205,5 +224,9 @@
     width: 50%;
     margin: 0 auto;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+      /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.19);
+    backdrop-filter: blur(5.8px);
+    -webkit-backdrop-filter: blur(5.8px);
   }
 }
