--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@
 
 body {
   background-color: #F3F4F6;
+  background-image: url(gallery/480p/mainbg-mobile.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -89,15 +90,83 @@ a {
   }
 }
 
+.togglemode {
+  position: fixed;
+  width: 25%;
+  top: 4rem;
+  left: 0;
+  padding: 0.8rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  span {
+    color: #333399;
+  }
+}
+
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 3rem;
+  height: 1.5rem;
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #7da7d9;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 0.75rem;
+}
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 1.2rem;
+  width: 1.2rem;
+  background-color: white;
+  left: 0.15rem;
+  bottom: 0.15rem;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 0.6rem;
+}
+#toggledark-btn:checked + .slider {
+  background-color: #e3d585;
+}
+#toggledark-btn:checked + .slider::before {
+  background-color: #252728;
+  -webkit-transform: translateX(1.5rem);
+  -ms-transform: translateX(1.5rem);
+  transform: translateX(1.5rem);
+}
+
 .header-icons {
   width: 2rem;
   margin-left: 0.8rem;
 }
+
+.gctlogo {
+  content: url(ico/light-mode/gct-blue.png);
+}
+.applogo {
+  content: url(ico/light-mode/logoonly-blue.svg);
+}
+
 .search-btn {
   position: absolute;
   right: 0;
   margin-right: 1rem;
   width: 2rem;
+  content: url(ico/light-mode/search-blue.svg);
 }
 
 /*sidebar starts here*/
@@ -123,11 +192,11 @@ a {
 }
 
 .sidebar-close {
-  content: url(ico/close.svg);
+  content: url(ico/light-mode/sidebarclose-blue.svg);
 }
 .desktop-sidebar {
   position: fixed;
-  top: 4rem;
+  top: 8rem;
   left: 0;
   z-index: 2;
   display: none;
@@ -158,7 +227,8 @@ a {
   }
 }
 .list-header:first-of-type {
-  border-bottom: 1px solid black;
+  border-top: 2px solid #333399;
+  border-bottom: 2px solid #333399;
 }
 
 .list-name {
@@ -223,6 +293,7 @@ a {
   height: 12rem;
   margin-bottom: 2rem;
   img {
+    content: url(ico/light-mode/maintitle-blue.svg);
     display: block;
     width: 80%;
   }
@@ -264,7 +335,6 @@ a {
   border-radius: 1.25rem;
   cursor: pointer;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s;
 
 }
 
@@ -300,24 +370,11 @@ a {
   margin-top: 0.41rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*mobile screen */
-@media only screen and (max-width: 480px) {
-}
-
 /*tablet screen*/
 @media only screen and (min-width: 481px) and (max-width: 1024px){
+  body {
+    background-image: url(gallery/768p/mainbg-tab.png);
+  }
   .main-title {
     margin-top: 2rem;
   }
@@ -337,6 +394,8 @@ a {
     align-items: flex-start;
     background-size: 100%;
     background-position: 100% -10%;
+    background-image: url(gallery/1152p/mainbg-desktop.png);
+
   }
   .main-title {
     width: 75%;
